<resources>
    <string name="app_name">Refundly</string>
    <string name="settings_title">Indstillinger</string>

    <!-- Bruges af navigation draweren -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- Bruges i preferencefragmentet -->
    <string name="pref_collector">Ændr bruger til opsamler</string>
    <string name="pref_collector_summary">Giver adgang til opsamlerfunktionerne i appen. Telefonnummer skal være indtastet, før denne funktion kan tilgås. Du vil blive kontaktet af en medarbejder pr. telefon for at validere din konto, inden du får adgang.</string>
    <string name="pref_active">Modtag besked om nye opsamlinger</string>
    <string name="pref_active_summary">Slå denne funktion fra, hvis du i en periode, ikke ønsker at modtage besked om nye opsamlinger</string>
    <string name="pref_password">Indtast kodeord</string>
    <string name="pref_password_summary">Kodeordet skal kun bruges, for at kunne logge på www.refundly.dk</string>
    <string name="pref_phonenumber">Indtast telefonnummer</string>
    <string name="pref_phonenumber_summary">Dit telefonnummer skal kun bruges til validering, hvis du ønsker at blive opsamler</string>

    <!-- Kategorier i preferencefragmentet -->
    <string name="pref_user_profile">Profil</string>
    <string name="pref_update_setting">App indstillinger</string>
    <string name="senderId">257762151236</string>

    <string name="collectorapplytext">Du er nu igang med at ansøge om at blive opsamler hos Refundly. Indtast dit telefonnummer i feltet nedenfor, og tryk på send. Herefter vil en af vores medarbejdere kontakte dig, så vi kan få aktiveret din profil.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
