<?xml version="1.0" encoding="utf-8"?>
    <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

        <PreferenceCategory android:title="@string/pref_user_profile" >
            <EditTextPreference
                android:title="@string/pref_password"
                android:summary="@string/pref_password_summary"
                android:key="prefPassword"
                android:inputType="textPassword"/>

           <EditTextPreference
                android:title="@string/pref_phonenumber"
                android:summary="@string/pref_phonenumber_summary"
                android:key="prefPhone"
               android:inputType="phone"/>
        </PreferenceCategory>

        <PreferenceCategory android:title="@string/pref_update_setting" >
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="prefCollector"
                android:summary="@string/pref_collector_summary"
                android:title="@string/pref_collector"
                android:enabled="false"/>

            <CheckBoxPreference
                android:key="prefCollectorActive"
                android:summary="@string/pref_active_summary"
                android:title="@string/pref_active"
                android:dependency="prefCollector"/>
        </PreferenceCategory>

    </PreferenceScreen>